tests/sksl/errors/ModifiersInStruct.glsl
### Compilation failed:

error: 2: modifier 'const' is not permitted on a struct field
    const float a;
    ^^^^^
error: 3: modifier 'uniform' is not permitted on a struct field
    uniform int b;
    ^^^^^^^
error: 4: modifier 'flat' is not permitted on a struct field
    flat half4 c;
    ^^^^
error: 5: modifier 'noperspective' is not permitted on a struct field
    noperspective float4 d;
    ^^^^^^^^^^^^^
error: 6: modifier 'inout' is not permitted on a struct field
    inout bool e;
    ^^^^^
error: 7: modifier 'readonly' is not permitted on a struct field
    readonly bool f;
    ^^^^^^^^
error: 8: modifier 'writeonly' is not permitted on a struct field
    writeonly bool g;
    ^^^^^^^^^
7 errors
